<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="strBox">Box One</string>
    <string name="strBox2">Box Two</string>
    <string name="strBox3">Box Three</string>
    <string name="strBox4">Box Four</string>
    <string name="strBox5">Box Five</string>
    <string name="strLabelToDo">How to play</string>
    <string name="strInfo">Tap the screen and buttons</string>
    <string name="strRed">RED</string>
    <string name="strGreen">GREEN</string>
    <string name="strBlue">BLUE</string>
</resources>